Swagger improvements (#12836)